[package]
name = "wflow"
version = "0.1.0"
edition = "2021"
authors=["Dreck <arandadikson@gmail.com>"]
description="Wflow is a cli tool for manage the workflow much better."
readme="README.md"
repository="https://github.com/Dreck2003/wflow"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
cli_printer = "0.2.0"
crossterm = "0.25.0"
